--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>TweetMe2</title>
+    <title>TweetMe</title>
   </head>
   <body>
-    {% block content %}
-    {% endblock content %}
+    {% include "components/navbar.html" %}
+    <div class='container'>
+        {% block content %}
+        {% endblock content %}
+    </div>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
