--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,6 @@ function loadTweet(tweetElemnet)
             finalTweetStr += tweet;
         }
         tweetElemnet.innerHTML = finalTweetStr;
-        console.log(finalTweetStr);
     }
     xhr.send()
 }
@@ -108,9 +107,12 @@ function handleTweetCreateForm(event)
     const method = myForm.getAttribute("method")
     xhr = new XMLHttpRequest()
     xhr.open(method, url)
+    xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
+    xhr.setRequestHeader("X-Requested-With","XMLHttpRequest")
     xhr.onload = function()
     {
         const serverResponse = xhr.response
+        console.log(xhr.status, xhr.response)
         const tweetElement = document.getElementById("tweets")
         loadTweet(tweetElement)
     }
